# mambagram

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_frozen.txt  setup.py
experiments/: 01_train_synthetic.py  02_train_icbhi.py  03_train_esc50.py
notebooks/: 01_chirp_sanity_check.py  02_chirp_corrected_plot.py  03_multi_signal_test.py  04_speedup_benchmark.py  05_tf_comparison.py  06_selective_sanity.py  07_gated_sanity.py  08_gate_diagnostic.py  09_memory_benchmark.py  10_param_drift_diagnostic.py  11_fft_kernel_diagnostic.py
src/mambagram/: __init__.py  _warnings.py  classifier.py  datasets.py  esc50.py  gated_layer.py  icbhi.py  layers.py  selective_layer.py
